// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`math/logic graph cluster render goldens (default state) > renders + pins a digest for algebraCAS 1`] = `
{
  "buttons": 15,
  "circles": 0,
  "inputs": 1,
  "lengthBucket": 37,
  "paths": 0,
  "sha": "bccad6396592d2cc",
  "svgs": 0,
}
`;

exports[`math/logic graph cluster render goldens (default state) > renders + pins a digest for calculus 1`] = `
{
  "buttons": 29,
  "circles": 1,
  "inputs": 9,
  "lengthBucket": 125,
  "paths": 0,
  "sha": "d147c9e9686afbc9",
  "svgs": 2,
}
`;

exports[`math/logic graph cluster render goldens (default state) > renders + pins a digest for dataPlot 1`] = `
{
  "buttons": 31,
  "circles": 0,
  "inputs": 9,
  "lengthBucket": 58,
  "paths": 0,
  "sha": "1c1b0e262ca89b5a",
  "svgs": 1,
}
`;

exports[`math/logic graph cluster render goldens (default state) > renders + pins a digest for dataStudio 1`] = `
{
  "buttons": 36,
  "circles": 0,
  "inputs": 21,
  "lengthBucket": 97,
  "paths": 0,
  "sha": "8fc2c38fcf6eb585",
  "svgs": 1,
}
`;

exports[`math/logic graph cluster render goldens (default state) > renders + pins a digest for funcGrapher 1`] = `
{
  "buttons": 0,
  "circles": 0,
  "inputs": 0,
  "lengthBucket": 0,
  "paths": 0,
  "sha": "755113491ce3b672",
  "svgs": 0,
}
`;

exports[`math/logic graph cluster render goldens (default state) > renders + pins a digest for geoQuiz 1`] = `
{
  "buttons": 12,
  "circles": 0,
  "inputs": 0,
  "lengthBucket": 34,
  "paths": 0,
  "sha": "e233d6becff88948",
  "svgs": 0,
}
`;

exports[`math/logic graph cluster render goldens (default state) > renders + pins a digest for geometryProver 1`] = `
{
  "buttons": 17,
  "circles": 0,
  "inputs": 0,
  "lengthBucket": 39,
  "paths": 0,
  "sha": "12fafa212925b7b2",
  "svgs": 1,
}
`;

exports[`math/logic graph cluster render goldens (default state) > renders + pins a digest for graphCalc 1`] = `
{
  "buttons": 26,
  "circles": 0,
  "inputs": 6,
  "lengthBucket": 68,
  "paths": 0,
  "sha": "4363d03513e5aaf6",
  "svgs": 0,
}
`;

exports[`math/logic graph cluster render goldens (default state) > renders + pins a digest for inequality 1`] = `
{
  "buttons": 30,
  "circles": 0,
  "inputs": 7,
  "lengthBucket": 94,
  "paths": 0,
  "sha": "8ff1ac9783867536",
  "svgs": 1,
}
`;

exports[`math/logic graph cluster render goldens (default state) > renders + pins a digest for logicLab 1`] = `
{
  "buttons": 41,
  "circles": 3,
  "inputs": 1,
  "lengthBucket": 124,
  "paths": 1,
  "sha": "a05adb38a699c44b",
  "svgs": 1,
}
`;

exports[`math/logic graph cluster render goldens (default state) > renders + pins a digest for probability 1`] = `
{
  "buttons": 39,
  "circles": 6,
  "inputs": 4,
  "lengthBucket": 148,
  "paths": 1,
  "sha": "27cfdfb53f19f701",
  "svgs": 2,
}
`;

exports[`math/logic graph cluster render goldens (default state) > renders + pins a digest for unitConvert 1`] = `
{
  "buttons": 22,
  "circles": 0,
  "inputs": 1,
  "lengthBucket": 80,
  "paths": 0,
  "sha": "6af8fd7606e3c276",
  "svgs": 0,
}
`;
